--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_boilerplate",
+  "name": "redux-toolkit-playground",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,15 +12,22 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
+    "json-server": "^0.17.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
@@ -31,9 +38,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
+    "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "prettier-plugin-sort-imports": "^1.7.2",
-    "typescript": "^5.0.4",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.3.5"
   },
   "lint-staged": {
