--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "client": "vite",
+    "dev": "concurrently \"npm run client\" \"npm run server\"",
     "build": "tsc && vite build",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "server": "json-server -p 3001 --watch db.json"
   },
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
@@ -20,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "tailwind-merge": "^1.13.0",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
@@ -28,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
+    "concurrently": "^8.1.0",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
