--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-redux": "^8.0.7",
     "tailwind-merge": "^1.13.0",
     "typescript": "^5.0.4"
   },
