--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/node": "^20.2.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
